# WindingNumber

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Eigen Notes - Matrix Vector  README.md  VTK File Type.md  dependencies.cmake
PaddingByLevelSet/: .dockerignore  .drone.yml  .gitattributes  CMakeLists.txt  Dockerfile  README.md  dependencies.cmake
PaddingByLevelSet/doc/: padding_by_ls.tex
PaddingByLevelSet/include/3rd/: rationals.hpp
PaddingByLevelSet/include/lspadding/: celltypes.hpp  common.hpp  cuts.hpp  cutting.hpp  extract_mesh.hpp  read_vtk.hpp
PaddingByLevelSet/scripts/: entry.sh  flip_flipped.py  run.sh
PaddingByLevelSet/src/: main.cpp  notremove.cpp
PaddingByLevelSet/tests/: CMakeLists.txt  test.cpp  test.hpp  test_common.cpp  test_cut.cpp  test_extract.cpp  test_integrated.cpp  test_read_vtk.cpp
PaddingByLevelSet/tests/data/: cube3x3.vtk  cube3x3_padded.vtk  vertex_vector.txt
PaddingByLevelSet/tests/data/broken/: cube3x3_no_padding.vtk
cmake/: get_cpm.cmake
files/: cube-out.vtk  tiger-out.vtk
include/: Constants.h  IO.h  Meshs.h  VTKreader.h  VTKwriter.h  WindingNumber.h
src/: Meshs.cpp  VTKreader.cpp  VTKwriter.cpp  io.cpp  main.cpp  random_points.cpp  winding_number.cpp
